--- a/public/app.css
+++ b/public/app.css
@@ -29,15 +29,21 @@ body {
 
 .post .post_comment-count {
     float: left;
-    width: 70px
+    width: 67px
 }
 
 .post_comment-upvote {
     float: left;
     width: 40px
 }
-
-.post_comment-upvote button {
+.post_comment-upvote button{
+    border: 0;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    line-height: 30px;
+}
+.post_comment-upvote button span {
     border: 0;
     background-color: transparent;
     padding: 0;
@@ -46,13 +52,20 @@ body {
     border-bottom: 5px solid #333;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    display: block;
 }
 
 .post_comment-info {
     float: left;
     width: 100%;
+    margin-top: 10px;
     max-width: calc(100% - 180px);
+    @media(min-width:768px){
+        margin-top: 0;
+    max-width: calc(100% - 180px);
+    }
 }
 
 .post-url {
